--- a/index.html
+++ b/index.html
@@ -1,87 +1,81 @@
 <!DOCTYPE html>
-<html lang="en" >
-   <head>
-      <link rel="shortcut icon" href="favicon.png" type="image/png"> 
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <meta name="description" content="With the divine grace of the almighty, inviting you and your family to Sunil's wedding to be held on 2nd of May.">
-  
-   
-      <title>Wedding Invitation | May 02 </title>
+<html lang="en">
 
-      <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
-      <link rel="stylesheet" href="./css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   </head>
-   <body>
-      <!-- partial:index.partial.html -->
-      <div class="sakura-falling"></div>
-      <img src="./assets/img/image-top-right.png" alt="image-top-right" class="top-right-decoration">
-      <img src="./assets/img/image-top-left.png" alt="image-top-left" class="top-left-decoration">
-      <section id="media"></section>
-      <div class="wrap">
-         <div class="title">
-            <p><b>।। श्री गणेशाय नमः ।।</b></p>
-            <h1>सुनील</h1>
-            <h2>&</h2>
-            <h1>लक्ष्मी</h1>
-            <h3>Are getting married</h3>
-            <p>
-               on <span class="date">02 May 2022</span></29>, At <span class="place">Tiwari Niwas</span> Jasrasar, Bikaner                
-            </p>
-         </div>
-      </div>
-      <div id="time">
-         <!-- <div class='container'>
-            <div class='days block'>10<br>Days</div>
-            <div class='hours block'>4<br>Hours</div>
-            <div class='minutes block'>45<br>Minutes</div>
-            <div class='seconds block'>44<br>Seconds</div>
-         </div> -->
-      </div>
-      <p class="dance-med">
-         dinner & dancing to follow
-      </p>
-      <div class="actions">
-        <a href="https://goo.gl/maps/K9Zok2vqZmFYtxUt9" target="_blank">
-          <div class="venue">SEE THE VENUE</div>
-        </a>
-        <!-- <a href="./assets/invitation.pdf" download="Invitation | 2 May | Hope to see you there!"> -->
-         <a href="./assets/invitation.pdf" target="_blank">
-          <div class="venue">DOWNLOAD INVITATION CARD</div>
-        </a>
-      </div>
-      <p class="footer">
-         Can't wait to celebrate auspicious moment of our family with you! <br>
-         Contact Us
-         <p class="contact-us">
-            <a href="https://api.whatsapp.com/send?phone=916350231370&utm_source=Messaging&utm_medium=Whatsapp" target="_blank" class=""><i class="fa fa-whatsapp"></i></a>
-            &nbsp;
-            <a href="tel::916350231370" target="_blank" class=""><i class="fa fa-phone"></i></a>
-         </p>
+<head>
+	<link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description"
+		content="With the divine grace of the almighty, inviting you and your family to Ram's wedding to be held on 5th of May.">
+	<title>Wedding Invitation | May 05 </title>
+	<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-         <!-- <span></span> -->
-      </p>
-      <div class="music">
-        <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio> 
-      </div>
-      <div class="tile__img">
-         <img class="tile__img" src="./assets/img/ggg.gif" alt="" />
-      </div>
-      <p class="happiness">Join Us In Our Happiness !</p>
-      <!-- partial -->
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-      <script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
-      <script  src="./js/script.js"></script>
-      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<body>
+	<div class="sakura-falling"></div>
+	<img src="./assets/img/image-top-right.png" alt="image-top-right" class="top-right-decoration">
+	<img src="./assets/img/image-top-left.png" alt="image-top-left" class="top-left-decoration">
+	<section id="media"></section>
+	<div class="wrap">
+		<div class="title">
+			<p><b>।। श्री गणेशाय नमः ।।</b></p>
+			<h1>राम</h1>
+			<h2>&</h2>
+			<h1>सीता</h1>
+			<h3>Are getting married</h3>
+			<p>
+				on <span class="date">05 May 2026</span></29>, At <span class="place">Raj Ratan Marriage Garden</span> Jaipur ,
+				Rajasthan
+			</p>
+		</div>
+	</div>
+	<div id="time">
+	</div>
+	<p class="dance-med">
+		<p class="event-title">-: Dinner and Dance :-</p> <p>Monday, 4th May 2026, 7 PM</p>
+		<p class="event-title">-: Wedding :-</p> <p>Tuesday, 5th May 2026, 11 AM</p>
+	 </p>
+	<div class="actions">
+		<a href="https://goo.gl/maps/E2iBt6ocx86wMzWp9" target="_blank">
+			<div class="venue">SEE THE VENUE</div>
+		</a>
+		<a href="./assets/invitation.pdf" download="Invitation | 5 May | Hope to see you there!" target="_blank">
+			<div class="venue">DOWNLOAD INVITATION CARD</div>
+		</a>
+	</div>
+	<p class="footer">
+		Can't wait to celebrate auspicious moment of our family with you! <br>
+		Contact Us
+	<p class="contact-us">
+		<a href="https://api.whatsapp.com/send?phone=916350231370&utm_source=Messaging&utm_medium=Whatsapp"
+			target="_blank" class=""><i class="fa fa-whatsapp"></i></a>
+		&nbsp;
+		<a href="tel::916350231370" target="_blank" class=""><i class="fa fa-phone"></i></a>
+	</p>
+	</p>
+	<div class="music">
+		<audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
+	</div>
+	<div class="tile__img">
+		<img class="tile__img" src="./assets/img/ggg.gif" alt="" />
+	</div>
+	<p class="happiness">Join Us In Our Happiness !</p>
+	<!-- partial -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+	<script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
+	<script src="./js/script.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-      <script>
-         swal("अभिनन्दन", "तिवारी परिवार आपका हार्दिक अभिनन्दन करता है !", "success", {
-            button: "Thanks",
-         });
-      </script>
-   </body>
+	<script>
+		swal("अभिनन्दन", "तिवारी परिवार आपका हार्दिक अभिनन्दन करता है !", "success", {
+			button: "Thanks",
+			icon: "./assets/img/welcome.jpg",
+		});
+	</script>
+</body>
 
 
 </html>
