--- a/index.html
+++ b/index.html
@@ -22,21 +22,20 @@
 	<div class="wrap">
 		<div class="title">
 			<p><b>।। श्री गणेशाय नमः ।।</b></p>
-			<h1>राम</h1>
+			<h1>Amoy</h1>
 			<h2>&</h2>
-			<h1>सीता</h1>
+			<h1>Ubeiden</h1>
 			<h3>Are getting married</h3>
 			<p>
-				on <span class="date">05 May 2026</span></29>, At <span class="place">Raj Ratan Marriage Garden</span> Jaipur ,
-				Rajasthan
+				on <span class="date">24 Oct 2026</span></29>, At <span class="place">Roldanillo, Valle</span> Colombia
 			</p>
 		</div>
 	</div>
 	<div id="time">
 	</div>
 	<p class="dance-med">
-		<p class="event-title">-: Dinner and Dance :-</p> <p>Monday, 4th May 2026, 7 PM</p>
-		<p class="event-title">-: Wedding :-</p> <p>Tuesday, 5th May 2026, 11 AM</p>
+		<p class="event-title">-: Dinner and Dance :-</p> <p>Saturday, 24th Oct 2026, 6 PM</p>
+		<p class="event-title">-: Wedding :-</p> <p>Saturday, 24th Oct 2026, 2:00 PM</p>
 	 </p>
 	<div class="actions">
 		<a href="https://goo.gl/maps/E2iBt6ocx86wMzWp9" target="_blank">
