--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<section id="media"></section>
 	<div class="wrap">
 		<div class="title">
-			<p><b>।। श्री गणेशाय नमः ।।</b></p>
 			<h1>Amoy</h1>
 			<h2>&</h2>
 			<h1>Ubeiden</h1>
@@ -69,7 +68,7 @@
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 	<script>
-		swal("अभिनन्दन", "तिवारी परिवार आपका हार्दिक अभिनन्दन करता है !", "success", {
+		swal("Bienvenido", "तिCordiamente invitado !", "success", {
 			button: "Thanks",
 			icon: "./assets/img/welcome.jpg",
 		});
