--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<a href="https://www.google.com/maps/place/Roldanillo,+Valle+del+Cauca,+Colombia/@4.4141804,-76.1727726,14z/data=!3m1!4b1!4m6!3m5!1s0x8e383714cff81901:0xdbf713a1f87e02ee!8m2!3d4.4154736!4d-76.1513942!16s%2Fg%2F11clwk8zqn?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
 			<div class="venue">SEE THE VENUE</div>
 		</a>
-		<a href="./assets/invitation.pdf" download="Invitation | 5 May | Hope to see you there!" target="_blank">
+		<a href="./assets/Amoy & Ubeiden.pdf" download="Invitation | 24 Oct | Hope to see you there!" target="_blank">
 			<div class="venue">DOWNLOAD INVITATION CARD</div>
 		</a>
 	</div>
