--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		</div>
 	</div>
 	<div id="time">
-	## </div>
-	## <p class="dance-med">
-	##	<p class="event-title">-: Dinner and Dance :-</p> <p>Saturday, 24th Oct 2026, 6 PM</p>
-	##	<p class="event-title">-: Wedding :-</p> <p>Saturday, 24th Oct 2026, 2:00 PM</p>
-	## </p>
+	 </div>
+	 <p class="dance-med">
+		<p class="event-title">-: Dinner & Dancing to follow :-</p> 
+	
+	 </p>
 	<div class="actions">
 		<a href="https://www.google.com/maps/place/Roldanillo,+Valle+del+Cauca,+Colombia/@4.4141804,-76.1727726,14z/data=!3m1!4b1!4m6!3m5!1s0x8e383714cff81901:0xdbf713a1f87e02ee!8m2!3d4.4154736!4d-76.1513942!16s%2Fg%2F11clwk8zqn?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
 			<div class="venue">SEE THE VENUE</div>
