--- a/index.html
+++ b/index.html
@@ -40,25 +40,19 @@
 		<a href="https://www.google.com/maps/place/Roldanillo,+Valle+del+Cauca,+Colombia/@4.4141804,-76.1727726,14z/data=!3m1!4b1!4m6!3m5!1s0x8e383714cff81901:0xdbf713a1f87e02ee!8m2!3d4.4154736!4d-76.1513942!16s%2Fg%2F11clwk8zqn?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
 			<div class="venue">SEE THE VENUE</div>
 		</a>
-		<a href="./assets/Amoy & Ubeiden.pdf" download="Invitation | 24 Oct | Hope to see you there!" target="_blank">
+		<a href="./assets/Amoy & Ubeiden.pdf" download="Invitation | 24 Oct 2026 | Hope to see you there!" target="_blank">
 			<div class="venue">DOWNLOAD INVITATION CARD</div>
 		</a>
 	</div>
 	<p class="footer">
 		Can't wait to celebrate auspicious moment of our family with you! <br>
-		Contact Us
-	<p class="contact-us">
-		<a href="https://api.whatsapp.com/send?phone=916350231370&utm_source=Messaging&utm_medium=Whatsapp"
-			target="_blank" class=""><i class="fa fa-whatsapp"></i></a>
-		&nbsp;
-		<a href="tel::916350231370" target="_blank" class=""><i class="fa fa-phone"></i></a>
-	</p>
+		
 	</p>
 	<div class="music">
 		<audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
 	</div>
 	<div class="tile__img">
-		<img class="tile__img" src="./assets/img/ggg.gif" alt="" />
+		<img class="tile__img" src="./assets/img/rings.jpg" alt="" />
 	</div>
 	<p class="happiness">Join Us In Our Happiness !</p>
 	<!-- partial -->
