--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 	<script>
-		swal("Bienvenido", "तिCordiamente invitado !", "success", {
+		swal("Bienvenido", "You Are Wellcome to Our Wedding!", "success", {
 			button: "Thanks",
 			icon: "./assets/img/welcome.jpg",
 		});
