--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	<script>
 		swal("Bienvenido", "You Are Wellcome to Our Wedding!", "success", {
-			button: "Thanks",
+			button: "Joing Us",
 			icon: "./assets/img/welcome.jpg",
 		});
 	</script>
