--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<script>
 		swal("Bienvenido", "You Are Wellcome to Our Wedding!", "success", {
 			button: "Joing Us",
-			icon: "./assets/img/welcome.jpg",
+			icon: "./assets/img/welcome.png",
 		});
 	</script>
 </body>
